syntax = "proto3";

package com.demkom58.spring_grpc_example;

option java_multiple_files = true;
option java_package = "com.demkom58.spring_grpc_example";
option java_outer_classname = "HelloServiceProto";

// The greeting service definition.
service HelloService {
  // Sends a greeting
  rpc sayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

